URL on image working

--- a/app/src/main/res/layout/activity_museum.xml
+++ b/app/src/main/res/layout/activity_museum.xml
@@ -27,6 +27,7 @@
         android:layout_height="208dp"
         android:layout_marginTop="84dp"
         android:contentDescription="@string/todo"
+        android:onClick="open"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
