--- a/app/src/main/res/layout/activity_museum.xml
+++ b/app/src/main/res/layout/activity_museum.xml
@@ -47,7 +47,7 @@
         app:layout_constraintVertical_bias="0.933" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinner1"
         android:layout_width="386dp"
         android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
